# autolab

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pixi.toml  pyproject.toml  tmp_sanity_wsl.py
.claude/: settings.local.json
.github/workflows/: ci.yml
demos/: FINAL_VIDEO_SCRIPT_AND_PRODUCTION_PLAN.md  PLAN.md  REMOTION_CLAUDE_CODE_IMPLEMENTATION_PROMPT.md  SCRIPT_COMPARISON.md
docs/: README.md
docs/architecture/: README.md  overview.md
docs/design/: 2026-04-22-competitive-landscape.md  2026-04-22-interpretations-and-metadata.md  GLOSSARY.md  autolab-ideas-foundation.md  concept-pack.md  hackathon-plan.md  scenarios.md  white-paper-2.md
docs/examples/: README.md
docs/guides/: 00-quickstart.md  01-adding-a-resource.md  02-adding-an-operation.md  03-free-text-campaign-design.md  04-running-workflows.md  05-exports-and-replay.md  README.md
docs/superpowers/plans/: 2026-04-23-ledger-chat-HANDOFF.md  2026-04-23-ledger-chat.md
docs/superpowers/specs/: 2026-04-22-onboarding-and-remote-execution-design.md  2026-04-22-service-and-console-iteration-design.md  2026-04-22-visual-shell-redesign-design.md
examples/: README.md  __init__.py
examples/add_demo/: __init__.py  bootstrap.py  check_import.py  operations.py  planner.py  test_bootstrap.py  test_e2e.py  test_ops.py  test_server_bootstrap.py
examples/mammos_sensor/: README.md  __init__.py  _strict.py  campaign.py  run.py  sensor_shape_opt_bootstrap.py  server_bootstrap.py  vm.py  workflow.py
examples/mammos_sensor/operations/: __init__.py  material.py  sensor.py  sensor_demo.py
examples/sensor_shape_opt/: README.md  pack.yaml
examples/superellipse_sensor/: README.md  __init__.py  adapter.py  campaign.py  geometry.py  run.py  server_bootstrap.py  tool.yaml
examples/wsl_demo/: __init__.py  bootstrap.py  debug_bootstrap.py  diagnose.py  operations.py  test_bootstrap.py  test_serve_wsl.py  write_scripts.py  wsl.py
examples/wsl_ssh_demo/: __init__.py  bootstrap.py  operations.py  planner.py  ssh.py
frontend/: README.md  index.html  package-lock.json  package.json  playwright.config.js  vite.config.js
frontend/e2e/: 01-smoke.spec.js  02-assistant.spec.js  03-library-flows.spec.js  04-workflow-canvas.spec.js  05-data-chat.spec.js  06-campaign-designer.spec.js  global-setup.js  helpers.js
frontend/e2e/legacy/: 02-resource-registration.spec.js  03-tool-registration.spec.js  04-workflow-builder.spec.js  05-campaign-launcher.spec.js  06-campaign-lifecycle.spec.js  07-dual-mode-ux.spec.js  08-full-flow.spec.js
frontend/src/: App.jsx  main.jsx  styles.css
frontend/src/components/: CampaignTab.jsx  EscalationsSlideOver.jsx  InterventionSlideOver.jsx  KeyValue.jsx  MetricCard.jsx  MiniChart.jsx  NewCampaignSlideOver.jsx  Overview.jsx  Provenance.jsx  RecordDetail.jsx  SettingsDrawer.jsx  Shell.jsx  SlideOver.jsx  StatusIndicator.jsx  TabNav.jsx
frontend/src/components/shared/: DualModeBuilder.jsx  RefinementPrompt.jsx
frontend/src/hooks/: useLabState.js
frontend/src/lib/: api.js  helpers.js  motion.js
frontend/src/pages/: AnalysisPage.jsx  AssistantPage.jsx  CampaignDetailPage.jsx  CampaignsPage.jsx  CapabilitiesPage.jsx  CapabilityDetailPage.jsx  DesignerPage.jsx  LedgerPage.jsx  ResourceDetailPage.jsx  ResourcesPage.jsx  SettingsPage.jsx  WorkflowDetailPage.jsx  WorkflowsPage.jsx
frontend/src/pages/campaign/: PhysicsCards.jsx  PlanTree.jsx  ReasoningRail.jsx  ResourceLanes.jsx
frontend/src/pages/designer/: CapabilityForm.jsx  ResourceForm.jsx
frontend/src/pages/designer/workflow/: CapabilityNode.jsx  NewCapabilityInline.jsx  NodeInspector.jsx  NodePicker.jsx  WorkflowCanvasEditor.jsx  convert.js  layout.js
frontend/src/shell/: AppShell.jsx  EmptyState.jsx  PageHeader.jsx  Sidebar.jsx  TopBar.jsx
frontend/src/utils/: citeHash.js
scripts/: _chart_compare.py  _demo_status.py  _demo_watch.py  _dump_claude_reasoning.py  _retry_claude.py  clean_local_state.py  register_sensor_demo.py  seed_demo_ledger.py
src/autolab/: __init__.py  acceptance.py  campaign.py  cli.py  dataset.py  estimation.py  events.py  export.py  lab.py  models.py  orchestrator.py  query.py  scheduler.py  workflow.py
src/autolab/agents/: __init__.py  claude.py
src/autolab/backends/: __init__.py  base.py  local.py  ssh.py
src/autolab/examples/: __init__.py
src/autolab/mcp/: __init__.py
src/autolab/operations/: __init__.py  base.py  interpretation.py
src/autolab/planners/: __init__.py  base.py  bo.py  optuna.py  registry.py
src/autolab/provenance/: __init__.py  hashing.py  store.py
src/autolab/resources/: __init__.py  manager.py
src/autolab/server/: __init__.py  app.py  cli.py
src/autolab/server/chat/: kernel.py  ledger_frame.py
src/autolab/server/static/: index.html
src/autolab/server/static/assets/: index-6rLk3_t9.js  index-ANdMsEyL.js  index-B-kjL3nM.js  index-B0V483kO.css  index-B1JfDtcR.js  index-B1Setup7.js  index-BbA1goP4.js  index-BgaKUy0X.js  index-BhKA5sgu.css  index-Bj84dsYh.js  index-Bp6d1L6C.js  index-BpZh8xV5.js  index-Byp7y1C7.js  index-C0WWcs2E.css  index-C0mDkBbp.js  (+23 more)
src/autolab/tools/: __init__.py  registry.py
src/autolab/tools/adapters/: __init__.py  shell_command.py
tests/: conftest.py
tests/integration/: test_add_demo_server.py  test_bootstrap_apply_api.py  test_campaign_end_to_end.py  test_campaign_prepare_start.py  test_escalation.py  test_mammos_sensor.py  test_mammos_strict_default.py  test_optuna_campaign.py  test_scheduler.py  test_sensor_shape_opt_real.py  test_server_api.py  test_wsl_demo.py  test_wsl_ssh_demo_server.py
tests/unit/: test_acceptance.py  test_add_demo_ops.py  test_add_demo_planner.py  test_backends.py  test_cli_bootstrap_apply.py  test_dataset.py  test_estimation_and_query.py  test_export_and_interpretation.py  test_failure_taxonomy.py  test_ledger.py  test_models.py  test_no_local_setup_literals.py  test_operation_registration.py  test_optuna_planner.py  test_planner_registry.py  test_resource_state.py  test_sample_lineage.py  test_sensor_demo_registration.py  test_shell_command.py  test_workflow.py
var/: demo_campaigns.txt
