[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autolab"
version = "0.0.1"
description = "A scientific record with an agent attached — a closed-loop, resource-aware, provenance-first lab framework."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name = "Sam Holt", email = "samjrholt@gmail.com" },
]
keywords = [
    "autonomous-science",
    "materials-discovery",
    "provenance",
    "closed-loop-lab",
    "claude",
    "mcp",
    "agent",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    # Web / service surface
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    # Typing / models / validation
    "pydantic>=2.7",
    # Provenance store
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    # Async primitives
    "anyio>=4.4",
    # CLI
    "typer>=0.12",
    # Config / serialisation
    "pyyaml>=6.0",
    "orjson>=3.10",
    # Logging
    "structlog>=24.1",
    # Numerics (BO planner, FeatureView arrays)
    "numpy>=1.26",
    # Optimisers
    "optuna>=4.0",
    # Claude + MCP
    "anthropic>=0.40",
    "mcp>=1.0",
]

[project.optional-dependencies]
dataset = [
    # Flatten the ledger into a DataFrame — only needed by autolab.dataset.
    "pandas>=2.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-PyYAML",
    "pandas>=2.0",
]

[project.scripts]
autolab = "autolab.cli:app"

[project.urls]
Homepage = "https://github.com/samjrholt/autolab"
Repository = "https://github.com/samjrholt/autolab"
Issues = "https://github.com/samjrholt/autolab/issues"

# ---- Hatch build ----

[tool.hatch.build.targets.wheel]
packages = ["src/autolab"]

[tool.hatch.build.targets.sdist]
include = [
    "src/autolab",
    "tests",
    "docs",
    "README.md",
    "LICENSE",
    "pyproject.toml",
    "pixi.toml",
]

# ---- Ruff ----

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle + pyflakes
    "I",              # isort
    "B",              # flake8-bugbear
    "UP",             # pyupgrade
    "N",              # pep8-naming
    "SIM",            # flake8-simplify
    "RUF",            # ruff-specific
]
ignore = [
    "E501",   # line length handled by the formatter
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---- mypy ----

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
files = ["src/autolab"]

[[tool.mypy.overrides]]
module = [
    "anthropic.*",
    "mcp.*",
]
ignore_missing_imports = true

# ---- pytest ----

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:pydantic.*",
]

# ---- coverage ----

[tool.coverage.run]
source = ["src/autolab"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
