[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autolab"
version = "0.0.1"
description = "An autonomous lab with provenance as its foundation."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name = "Sam Holt", email = "samjrholt@gmail.com" },
]
keywords = [
    "autonomous-science",
    "materials-discovery",
    "provenance",
    "closed-loop-lab",
    "claude",
    "mcp",
    "agent",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    # Web / service surface
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    # Typing / models / validation
    "pydantic>=2.7",
    # Provenance store
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    # Async primitives
    "anyio>=4.4",
    # CLI
    "typer>=0.12",
    # Config / serialisation
    "pyyaml>=6.0",
    "orjson>=3.10",
    # Logging
    "structlog>=24.1",
    # Numerics (BO planner, array outputs)
    "numpy>=1.26",
    # Visualisation (hysteresis PNG rendering)
    "matplotlib>=3.9",
    # Optimisers
    "optuna>=4.0",
    # Claude + MCP
    "anthropic>=0.40",
    "mcp>=1.0",
    # Env file loading
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dataset = [
    # Flatten the ledger into a DataFrame — only needed by autolab.dataset.
    "pandas>=2.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-PyYAML",
    "pandas>=2.0",
]

[project.scripts]
autolab = "autolab.cli:app"

[project.urls]
Homepage = "https://github.com/samjrholt/autolab"
Repository = "https://github.com/samjrholt/autolab"
Issues = "https://github.com/samjrholt/autolab/issues"

# ---- Hatch build ----

[tool.hatch.build.targets.wheel]
packages = ["src/autolab"]

[tool.hatch.build.targets.sdist]
include = [
    "src/autolab",
    "tests",
    "docs",
    "frontend",
    "README.md",
    "LICENSE",
    "pyproject.toml",
    "pixi.toml",
]

# ---- Ruff ----

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle + pyflakes
    "I",              # isort
    "B",              # flake8-bugbear
    "UP",             # pyupgrade
    "N",              # pep8-naming
    "SIM",            # flake8-simplify
    "RUF",            # ruff-specific
]
ignore = [
    "E501",   # line length handled by the formatter
    # Physics symbol conventions: variables and arguments commonly use
    # capital letters from the literature (Ms, A, K1, L, X, Y, ...).
    # Renaming to lowercase would obscure the physics, so we permit them.
    "N803",   # argument name should be lowercase
    "N806",   # variable in function should be lowercase
    # Typer's recommended pattern is `def cmd(opt: T = typer.Option(...))`.
    # B008 forbids function calls in defaults; we accept this for Typer.
    "B008",
    # `class Foo(str, Enum)` is intentional - the str mixin makes enums
    # serialise to their string values for JSON contracts. UP042 wants
    # StrEnum (Python 3.11+) but we keep the explicit mixin for clarity.
    "UP042",
    # Test files that bootstrap sys.path or env vars before importing
    # autolab modules trip E402; the imports must come after setup.
    "E402",
    # Style-only suggestions; readable as written.
    "SIM102", "SIM108", "SIM117",
    # Unicode `x` (multiplication) is correct in physics docstrings.
    "RUF002",
    # `int(int_var)` cast for type narrowing is intentional.
    "RUF046",
]

[tool.ruff.lint.per-file-ignores]
# Package root keeps __all__ grouped semantically (Models / Planner / ...),
# not alphabetically sorted.
"src/autolab/__init__.py" = ["RUF022"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---- mypy ----

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
ignore_missing_imports = true
files = ["src/autolab"]
# Strict mode is aspirational: many of the framework-internal modules
# pre-date the typed boundary. The CI gate runs lint + tests + frontend
# build; mypy is run locally as a sanity check on the typed surfaces.

[[tool.mypy.overrides]]
module = [
    "anthropic.*",
    "mcp.*",
    "ubermag.*",
    "discretisedfield.*",
    "micromagneticmodel.*",
    "oommfc.*",
    "mammos_analysis.*",
    "mammos_entity.*",
    "mammos_units.*",
    "mammos_spindynamics.*",
    "optuna.*",
    "matplotlib.*",
]
ignore_missing_imports = true

# ---- pytest ----

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:pydantic.*",
    # Windows TestClient teardown: unclosed socket/event-loop noise, not test failures.
    "ignore::ResourceWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]

# ---- coverage ----

[tool.coverage.run]
source = ["src/autolab"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
